--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -11,6 +11,8 @@
       <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color"/>
+      <link rel="stylesheet" href="../css/sweetalert2.min.css">
+      <script src="../js/sweetalert2.min.js"></script>
       <script src="../js/jquery-2.1.4.min.js"></script>
       <script src="../js/bootstrap.js"></script>
       <script src="../js/angular.min.js"></script>
