--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -15,13 +15,12 @@
         <script src="../js/jquery-2.1.4.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
         <script src="../js/angular.min.js"></script>
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-aria.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
     </head>
-    <body ng-app="home" ng-controller="homeCntrl">
+    <body ng-app="home" ng-controller="homeCntrl" ng-cloak>
         <nav id="header-nav" class="navbar default navbar-light bg-faded">
             <div class="container-fluid">
                 <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
@@ -69,7 +68,7 @@
                                         <input ng-model="skill_name" class='form-control' id='Skill Name' placeholder='Skill Name' type='text' name="skill_name" ng-required="true">
                                         <div ng-messages="userForm.skill_name.$error" ng-show="userForm.skill_name.$invalid && userForm.skill_name.$touched">
                                             <div ng-message-exp="['required']" ng-hide="userForm.skill_name.$valid">
-                                                <span translate>rule.skill_name.errors.required</span>
+                                                <span translate>Skill name is required.</span>
                                             </div>
                                         </div>
                                     </md-input-container>
@@ -77,17 +76,15 @@
                                 <div>
                                     <md-input-container class="md-block" flex>
                                         <label>Category</label>
-                                        <md-select ng-model="categoryChoice" name="skill_category" ng-required="true">
+                                        <md-select ng-model="categoryChoice" name="skill_category">
                                             <md-option ng-value="category.name" ng-repeat="category in categories">{{ category.name }}</md-option>
                                         </md-select>
-                                        <div class="errors" ng-messages="userForm.skill_category.$error" ng-show="userForm.$invalid && userForm.skill_category.$touched">
-                                            <div ng-message="required"  ng-hide="userForm.skill_name.$valid">Required</div>
-                                        </div>
                                     </md-input-container>
-                                    <md-input-container class="md-block" flex>
-                                        <label>Timings</label><br/>
+                                    <md-input-container class="md-block" layout-xs="row">
+                                        <label class="Skill-timings">Timings</label><br/>
                                         <fieldset data-ng-repeat="choice in choices" class="md-block">
-                                        <md-input-container class="day">
+                                        <md-input-container class="day" flex-gt-sm>
+                                            <label>Day</label>
                                             <md-select ng-model="choice.day">
                                                 <!--<md-optgroup label="Day">-->
                                                     <md-option ng-value="weekDay.name" ng-repeat="weekDay in days">
@@ -96,12 +93,12 @@
                                                 </md-optgroup>
                                             </md-select>
                                         </md-input-container>
-                                        <md-input-container>
+                                        <md-input-container flex-gt-sm>
                                             <label>To</label>
                                             <input type="time" id="exampleInput" name="input" ng-model="choice.toTime"
                                             placeholder="To" required/>
                                         </md-input-container>
-                                        <md-input-container>
+                                        <md-input-container flex-gt-sm>
                                             <label>From</label>
                                             <input type="time" id="exampleInput" name="input" ng-model="choice.fromTime"
                                             placeholder="From" required/>
@@ -117,9 +114,8 @@
                                         <textarea ng-model="description" class='form-control' id='id_description' placeholder='Description' rows='3'></textarea>
                                     </div>
                             </md-input-container>
-                            <md-dialog-actions layout="row" layout-align="space-around center" layout-wrap>
+                            <md-dialog-actions layout="row" layout-align="center center" layout-wrap>
                                 <md-button class='md-raised md-primary' type="submit" ng-disabled="userForm.$invalid" ng-click="register()">Add Skill</md-button>
-                                <md-button class='md-raised md-warn' type="button" ng-click="cancel()">Cancel</md-button>
                             </md-dialog-actions>          
                         </form>
                         </div>
@@ -128,6 +124,5 @@
             </md-dialog>
         </script>
         <script src="../js/script.js"></script>
-        <script src="../js/app.js"></script>
     </body>
 </html>
