--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -20,7 +20,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
     </head>
-    <body ng-app="home" ng-controller="homeCntrl" ng-cloak>
+    <body ng-app="MyApp" ng-controller="homeCntrl" ng-cloak>
         <nav id="header-nav" class="navbar default navbar-light bg-faded">
             <div class="container-fluid">
                 <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
@@ -47,6 +47,7 @@
                         </div>
                     </li>
                 </ul>
+            </div>
             </div>
         </nav>
         <script type="text/ng-template" id="/tpl.html">
@@ -123,6 +124,7 @@
                 </div>  
             </md-dialog>
         </script>
-        <script src="../js/script.js"></script>
+        <script src="../js/app.js"></script>
+        <script src="../js/controller.js"></script>
     </body>
 </html>
