add skill link added on home page.

--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -39,7 +39,7 @@
                                 <a class="btn btn-outline-success" href="profilePage.html">Profile</a>
                             </p>
                             <p>
-                                <md-button ng-click="openDialog()">Add Skill</md-button>
+                                <a href="#" type="button" ng-click="openDialog()">Add Skill</a>
                             </p>
                             <div class="dropdown-divider">
                                 <a href="#" type="submit" ng-click="logout()">Logout</a>
