--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -46,8 +46,8 @@
                 </div>
         </nav>
 
-        <div ng-include="'categorySidebar.html'"></div>
-        <div ng-include="'skillsHolder.html'"></div>
+        <div  ng-include="'categorySidebar.html'"></div>
+        <div style="z-index: -1;" ng-include="'skillsHolder.html'"></div>
 
     </body>
 </html>
