resolved the issue of login dropdown moving to extreme right

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,8 +27,8 @@
     <div class="navbar-header col-sm-2 col-xs-1 col-md-2">
         <a class="navbar-brand" href="index.html">ShowYourSkillz</a>
     </div>
-    <div class="nav pull-right" id="myNavbar" ng-controller="LoginCtrl">
-        <ul class="nav navbar-nav pull-right">
+    <div class="nav" id="myNavbar" ng-controller="LoginCtrl">
+        <ul class="nav navbar-nav">
             <li class="nav-item dropdown" id="menuLogin">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navbarDropdownMenuLink"
                    aria-haspopup="true" aria-expanded="false">Login</a>
@@ -46,7 +46,7 @@
                     </form>
                 </div>
             </li>
-            <li>
+            <li class="signupclass">
                 <a href="#" type="submit" ng-click="signup()">SignUp</a>
             </li>
         </ul>
