minor UI issues fixed

--- a/src/main/resources/static/html/skillsHolder.html
+++ b/src/main/resources/static/html/skillsHolder.html
@@ -23,7 +23,7 @@
         <div id="products" class="row list-group" ng-controller="skillsController">
 
             <div ng-repeat="skill in skills">
-                <div class="item  col-xs-4 col-lg-4">
+                <div class="item col-xs-10 col-sm-10 col-lg-4">
                     <div class="thumbnail">
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">{{ skill.skillName }}</h4>
