--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -129,6 +129,7 @@
             </md-dialog>
         </script>
         <script src="../js/app.js"></script>
+        <script src="../js/directive.js"></script>
         <script src="../js/controller.js"></script>
     </body>
 </html>
