changes regarding skillCategory function

--- a/src/main/resources/static/html/categorySidebar.html
+++ b/src/main/resources/static/html/categorySidebar.html
@@ -6,8 +6,8 @@
         </div>
 
         <div ng-controller='MainController' style="font-size:12px; letter-spacing: 0.08em; color:white">
-  <span ng-repeat="fruit in fruits">
-    <input type='checkbox' value="{{fruit}}" check-list='checked_fruits'> {{fruit}}<br/>
+  <span ng-repeat="category in categories">
+    <input type='checkbox' value="{{category}}" check-list='checked_category'> {{category}}<br/>
   </span>
         </div>
 
