modules for editing and removing course added

--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -54,8 +54,16 @@
             <h4 style="text-transform: Capitalize;">{{f_name}} {{l_name}}</h4>
             <div class="flowers-wrap"> 
               <form>
-                <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.1em; margin-top: 20px;font-family: 'Impact';font-weight: 100;">Manage Profile</label><br>
-                <label style="font-size:13px; margin-bottom:10px; letter-spacing: 0.05em; font-family: 'Helvetica'">Manage Courses</label><br>
+                <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.1em; margin-top: 20px;font-family: 'Impact';font-weight:normal;">Manage Profile</label><br>
+                <div class="Skills">
+                  <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.1em; font-family: 'Impact';font-weight:normal">
+
+                      <a class="btn btn-outline-success btn-color=" href="manageCourses.html">Manage Courses</a>
+
+                  </label><br>
+
+                </div>
+                <!--<label style="font-size:13px; margin-bottom:10px; letter-spacing: 0.05em; font-family: 'Helvetica'; font-weight: 100;" ng-click="openManageCourses()">Manage Courses</label><br>-->
               </form>                                 
             </div>
           </div>
