interest button added

--- a/src/main/resources/static/html/courseEdit.html
+++ b/src/main/resources/static/html/courseEdit.html
@@ -52,17 +52,9 @@
     <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2" id="sideList">
         <div class="grid1">
             <div class="grid1elements">
-                <h3>Your Profile</h3>
+                <h3>Your COurse</h3>
                 <br>
-                <h4 style="text-transform: Capitalize;">{{f_name}} {{l_name}}</h4>
-                <div class="flowers-wrap">
-                    <form ng-init="getdetails()">
-                        <label style="font-size:13px; margin-bottom:10px; letter-spacing: 0.1em; margin-top: 20px;font-family: 'Helvetica';font-weight: 100;">Manage
-                            Profile</label><br>
-                        <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.05em; font-family: 'Impact'"
-                               ng-click="openManageCourses()">Manage Courses</label><br>
-                    </form>
-                </div>
+                <h4 style="text-transform: Capitalize;">{{skill_Name}}</h4>
             </div>
         </div>
     </div>
